--- a/shared-frame.css
+++ b/shared-frame.css
@@ -5,7 +5,7 @@ body {
 	font-family:Verdana, Geneva, sans-serif;
 	/*background:linear-gradient(#eeeeee,#dcdcdc);*/
 	background-color:#eee;
-	min-width:775px;
+	min-width:799px;
 }
 a {text-decoration:none;}
 /*header-start*/
